# serial-port

./: Cargo.toml  Dioxus.toml  README.md
.github/agents/: code-writer.agent.md  inspector.agent.md  module-specifier.agent.md
.github/workflows/: cargo-build-test.yml
assets/: serial-display.css  tailwind.css
client/: Cargo.toml
client/src/: client.rs  config.rs  lib.rs  path.rs
client/src/client/: data.rs  error.rs
docs/: README.md  _sidebar.md  index.html
docs/getting-started/: acceptance.md  configuration.md
rules/: cargo-coding-rules.md  cargo_toml.rules.md  coding.rules.md  rust-coding-rules.md
server/: Cargo.toml
server/assets/: main.css
server/src/: broker.rs  config.rs  drivers.rs  factory.rs  gui.rs  main.rs  mqtt_runner.rs  path.rs
server/src/drivers/: emulator.rs  kd3005p.rs
server/src/gui/: button_power.rs  current_setter.rs  voltage_setter.rs
server/src/mcp/: tools.rs
server/src/mqtt_runner/: helper.rs
src/: client.rs  config.rs  constant.rs  constants.rs  drivers.rs  factory.rs  gui.rs  lib.rs  main.rs  mcp.rs  mqtt_runner.rs  path.rs  server.rs
src/client/: builder.rs  mod.rs
src/constants/: mod.rs  topics.rs
src/drivers/: emulator.rs  standard.rs
src/mcp/: tools.rs
src/payload/: bytes.rs  error.rs  mod.rs  status.rs
src/server/: factory.rs  gui.rs  mcp.rs  mod.rs  mqtt.rs  services.rs  state.rs
src/server/cli/: README.md  mod.rs
src/server/config/: mod.rs  path.rs  tui.rs
src/server/drivers/: emulator.rs  factory.rs  mod.rs  standard.rs
src/server/gui/: config_button.rs  current_setter.rs  device_selector.rs  voltage_setter.rs
src/server/mcp/: tools.rs
src/server/services/: mod.rs
src/server/services/mcp/: mod.rs  tools.rs
src/server/services/runners/: mod.rs
src/server/services/runners/runner/: mod.rs
src/server/services/tui/: mod.rs
src/server/services/tui/loading/: README.md  mod.rs
src/server/tui/: mod.rs
toolkit/: Cargo.toml
toolkit/src/: lib.rs
