[package]
name = "pza-serial-port"
version = "0.1.0"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Serial Port Server - MQTT broker and device management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ---
# Trait for async functions in traits
async-trait = { version = "0.1.89" }
# ---
# Error handling library
thiserror = "2.0.17"
# ---
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }


serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

tracing = "0.1.37"
# Local dependencies

pza-toolkit = { path = "../toolkit" }

# Server-specific dependencies
dioxus = { version = "0.6.3", features = [] }
dirs = "6.0.0"
serde_json5 = "0.2.1"
dioxus-logger = "0.6.2"

# ---
# Random string generator
rand = "0.8.5"
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# Config for rumqttd
config = "0.15.17"
# ---
bytes = "1.10.1"
# ---
# KD3005P Driver
# ka3005p = { version = "0.5.0" }
ka3005p = { git = "https://github.com/XdoctorwhoZ/ka3005p", branch = "unitary_get_values" }
# ---

rmcp = { version = "0.7.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
schemars = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
